added screenshots from the app